# gui-file-viewer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  conanfile.txt
src/: CMakeLists.txt  application.cpp  application.h  main.cpp  pch.h  utils.h  window.h
src/events/: application_event.h  event.h  key_event.h  mouse_event.h
src/logging/: log.cpp  log.h
src/platform/windows/: WindowsWindow.cpp  WindowsWindow.h
src/render/: render.h
src/shaders/: fragmentShader.shader  shader.cpp  shader.h
